[tool.poetry]
name = "Democraz"
version = "0.1.0"
description = ""
authors = ["DoodlesEpic <eduardomoraes84@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
