[tool.poetry]
name = "democraz_brasil"
version = "0.1.0"
description = ""
authors = ["DoodlesEpic <eduardomoraes84@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.16"
requests = "^2.26.0"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
