[tool.poetry]
name = "democraz_brasil"
version = "0.1.0"
description = ""
authors = ["DoodlesEpic <eduardomoraes84@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
whitenoise = "^6.6"
gunicorn = "^22.0"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
autopep8 = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
